src/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

.App {
  font-family: 'Open Sans', sans-serif;
}

.form-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 12px;
  background-color: #3AD886;
  width: 30vw;
  height: 30vh;
  position: absolute;
  right: 15%;
  top:25%;
}

.form-btn-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.form-btn {
  margin: 10px;
  background-color: #ED6B5A;
  border: none;
  border-radius: 6px;
}

.form-btn:hover {
  background-color: #AB2A19;
}

.inventory-container {
  background-color: #D34735;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: center;
  width: 40vw;
  height:30vh;
  padding: 10px;
  margin: 90px;
  border-radius: 12px;
}

.inventory-text {
  margin-left: 60px;
  position: relative;
  font-size: 20px;
  font-weight: bolder;
}

.inventory-container img {
  width: 200px;
  position: absolute;
  left: 8%;
}

.inventory-container button {
  padding: 10px;
  margin: 10px;
  position: flex;
  top:5%;
  background-color: #3AD886;
  border: none;
  border-radius: 4px;
  font-weight: bolder;
}

.inventory-container button:hover {
  background-color: #ED6B5A;
}

.inventory-img {
  display: relative;
  padding: 5px;
  margin: 10px;
  height: 190px;
  width: 50px;
}

.nav-container {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  padding: 20px;
  color: white;
  text-align: left;
  height: 90px;
  width: 100%;
  align-items: center;
  background-color: #AB2A19;
}

.nav-container button {
  display: flex;
  border-radius: 4px;
  border: none;
  padding: 10px;
  color: black;
  background-color: #ED6B5A;
  font-weight: bolder;
}

.nav-container button:hover {
  background-color: #3AD886;
}

